[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[project]
name = "pylibremidi"
version = "5.3.1"
description = "A modern C++ MIDI 1 / MIDI 2 real-time & file I/O library. Supports Windows, macOS, Linux and WebMIDI."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Celerier Jean-Michaël", email = "jeanmichael.celerier@gmail.com" },
]
classifiers = [
    "License :: BSD2",
]
[project.urls]
Homepage = "https://github.com/celtera/libremidi"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"
cmake.source-dir = "./bindings/python"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.10+
wheel.py-api = "cp310"